2005-07-08  Juergen Wieferink  <wieferink@freenet.de>

	* src/internal.c (f_call f_calln): Free all strings used as dummy
	variables; fixes memory leak.

	* src/eval.h src/eval.c: New function free_at() that frees all strings
	stored in an old action table so that there is no memory leak when the
	table is re-used.

	* src/command.c (define): Free old action table if a function is 
	redefined; fixes memory leak.

	* src/parse.c (temp_at parse_primary_expression): Recode to use new
	free_at() routine.
	
2005-07-08  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc src/internal.c (f_range f_strstrt) 
	src/parse.c (parse_primary_expression):
	
	Switch convention of substring indexing from C-like (first character has
	index 0) to Fortran-like (first character has index 1).  This makes the
	routines strstrt() and word() consistent with each other, and makes the
	range specifier form string[beg:end] consistent with both of them.

	* demo/stringvar.dem: Expand demo to illustrate use of the substring
	operator and the various string string functions.
	
2005-07-07  Ethan Merritt  <merritt@u.washington.edu>

	* src/gp_types.h: Provide a pseudo-plot type NODATA to indicate that
	this plot is being skipped because the datafile was empty.

	* src/plot2d.c (eval_plots): When no valid points are found in a data
	file, issue a warning message, mark the current plot as NODATA, but then
	process the rest of the command line as normal rather than bailing to 
	command line. This is a return to the behavior of 3.7.2, except that now
	there is an explicit warning message for each empty file. If other code
	sections code are sensitive to lack of data, they can test for NODATA.
	Addresses enhancement requests #1063873 and #1204125.

2005-07-06  Ethan Merritt  <merritt@u.washington.edu>

	* src/internal.c (f_sprintf): Switch from using a fixed length output
	buffer to a dynamically-allocated one. The string output by sprintf is
	no longer limited to 80 characters.
